Typos - Added GitHub and GitLab links

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GIT WORKFLOWS</title>
+    <title>GIT Workflows - @santiagomr</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,9 +31,8 @@ class: center
 # Santiago Martínez
 ### @santiagomr
 <br>
-<img src="src/img/github-sq.png" height="100px">
-<img src="src/img/gitlab-sq.png" height="100px">
-
+<a href="https://github.com/santiagomr"><img src="src/img/github-sq.png" height="100px"></a>
+<a href="https://gitlab.com/santiagomr"><img src="src/img/gitlab-sq.png" height="100px"></a>
 ---
 <br>
 <img src="src/img/git-full-logo.png" height="90px">
